# aoc-2024

./: Cargo.toml  sample.aoc
src/: loading.rs  main.rs  menu.rs  puzzle_input_asset.rs  puzzle_input_lines_asset.rs  puzzle_input_string_asset.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
